--- a/src/main/resources/static/fxml/allOffers.fxml
+++ b/src/main/resources/static/fxml/allOffers.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllOffersController">
-    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"  />
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllOffersController">
+    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    <VBox layoutY="54.0" prefHeight="36.0" prefWidth="1080.0">
       <children>
          <ToolBar prefHeight="36.0" prefWidth="1066.0">
@@ -21,9 +14,13 @@
                <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
                <Label text="Category :" />
                <ComboBox fx:id="category" prefHeight="25.0" prefWidth="60.0" />
-               <Label text="Location :" />
-               <ChoiceBox fx:id="radiusOrPostcode" prefHeight="25.0" prefWidth="60.0" />
-               <TextField fx:id="location" prefHeight="25.0" prefWidth="81.0" promptText="54510, 30, ..." />
+               <Label text="Zip code :" />
+               <TextField fx:id="location" prefHeight="26.0" prefWidth="51.0" promptText="54510" />
+               <Label text="Price :" />
+               <Label text="min" />
+               <TextField fx:id="priceMin" prefHeight="26.0" prefWidth="26.0" />
+               <Label text="max" />
+               <TextField fx:id="priceMax" prefHeight="26.0" prefWidth="27.0" />
                <VBox prefHeight="26.0" prefWidth="88.0">
                   <children>
                      <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="26.0" prefWidth="91.0" text="Save filters" />
@@ -45,6 +42,7 @@
             </content></ScrollPane>
       </children>
    </VBox>
+   <Label text="Label" />
 
 
 </AnchorPane>
