--- a/src/main/resources/static/fxml/professor.fxml
+++ b/src/main/resources/static/fxml/professor.fxml
@@ -6,23 +6,45 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="324.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfessorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="500.0" style="-fx-background-color: #FDF4EC;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfessorController">
 
     <children>
-        <Button fx:id="saveButton" layoutX="426.0" layoutY="149.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
-        <TextField fx:id="markTextField" layoutX="194.0" layoutY="32.0" prefHeight="26.0" prefWidth="52.0" />
-        <TextArea fx:id="descriptionTextArea" layoutX="42.0" layoutY="122.0" prefHeight="98.0" prefWidth="323.0" />
-        <PasswordField fx:id="PW" layoutX="171.0" layoutY="272.0" />
-        <Label layoutX="42.0" layoutY="276.0" text="Enter your password" />
-        <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
+        <Label fx:id="errorLabel" alignment="CENTER" prefHeight="38.0" prefWidth="500.0">
             <font>
                 <Font size="9.0" />
             </font>
         </Label>
-      <Label layoutX="42.0" layoutY="36.0" text="Please give your rate (0-5)" />
-        <Label layoutX="42.0" layoutY="97.0" text="If you want you can leave a short description (500 characters)" />
+      <HBox alignment="CENTER" prefHeight="325.0" prefWidth="500.0" spacing="40.0" stylesheets="@../css/modify.css">
+         <children>
+            <VBox alignment="CENTER" prefHeight="325.0" prefWidth="325.0" spacing="20.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="271.0" spacing="10.0">
+                     <children>
+                        <Label prefHeight="18.0" prefWidth="167.0" text="Please give your rate (0-5)" />
+                          <TextField fx:id="markTextField" prefHeight="26.0" prefWidth="52.0" styleClass="textfield" stylesheets="@../css/orderViews.css" />
+                     </children>
+                  </HBox>
+                  <VBox spacing="5.0">
+                     <children>
+                          <Label text="If you want you can leave a short description (500 characters)" />
+                          <TextArea fx:id="descriptionTextArea" prefHeight="98.0" prefWidth="323.0" style="-fx-background-color: white; -fx-border-color: #FEC89A;" />
+                     </children>
+                  </VBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                          <Label text="Enter your password" />
+                          <PasswordField fx:id="PW" styleClass="textfield" stylesheets="@../css/orderViews.css" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+              <Button fx:id="saveButton" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
+         </children>
+      </HBox>
     </children>
 
 </AnchorPane>
