--- a/src/main/resources/static/fxml/valid.fxml
+++ b/src/main/resources/static/fxml/valid.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-    <Label fx:id="errorLabel" layoutX="26.0" layoutY="73.0" text="All done!! You can close and go back to your profile">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="425.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="errorLabel" alignment="CENTER" prefHeight="150.0" prefWidth="425.0" styleClass="done" stylesheets="@../css/modify.css" text="All done!! You can close and go back to your profile">
         <font>
             <Font size="15.0" />
         </font>
