--- a/src/main/resources/static/fxml/allConvos.fxml
+++ b/src/main/resources/static/fxml/allConvos.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllConvController">
    <children>
       <VBox prefHeight="600.0" prefWidth="300.0">
@@ -16,7 +15,10 @@
                   <Label alignment="CENTER" text="My Discussions" />
                </children>
             </HBox>
-            <ScrollPane fx:id="scrollPane" prefHeight="558.0" prefWidth="300.0" />
+            <ScrollPane fx:id="scrollPane" prefHeight="558.0" prefWidth="300.0">
+               <content>
+                  <VBox prefHeight="550.0" prefWidth="300.0" />
+               </content></ScrollPane>
          </children>
       </VBox>
    </children>
