--- a/src/main/resources/static/fxml/miniConv.fxml
+++ b/src/main/resources/static/fxml/miniConv.fxml
@@ -7,25 +7,13 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane prefHeight="50.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MiniConvController">
+<VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="250.0" onMouseClicked="#goToConv" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MiniConvController">
    <children>
-      <HBox layoutY="-1.0">
-         <children>
-            <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="250.0" onMouseClicked="#goToConv">
-               <children>
-                  <Label fx:id="otherName" prefHeight="18.0" prefWidth="128.0" />
-                  <Label fx:id="lastMessage" prefHeight="18.0" prefWidth="243.0" />
-               </children>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="50.0" prefWidth="50.0">
-               <children>
-                  <Label fx:id="time" prefHeight="18.0" prefWidth="34.0" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+      <Label fx:id="time" prefHeight="18.0" prefWidth="34.0" />
+      <Label fx:id="otherName" prefHeight="18.0" prefWidth="128.0" />
+      <Label fx:id="lastMessage" prefHeight="18.0" prefWidth="243.0" />
    </children>
-</AnchorPane>
+   <HBox.margin>
+      <Insets />
+   </HBox.margin>
+</VBox>
