--- a/src/main/resources/static/fxml/allConvos.fxml
+++ b/src/main/resources/static/fxml/allConvos.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllConvController">
    <children>
-      <VBox fx:id="messages" prefHeight="600.0" prefWidth="300.0">
+      <VBox prefHeight="600.0" prefWidth="300.0">
          <children>
             <HBox alignment="CENTER" prefHeight="50.0" prefWidth="300.0">
                <children>
@@ -18,7 +18,7 @@
             </HBox>
             <ScrollPane fx:id="scrollPane" prefHeight="558.0" prefWidth="300.0">
                <content>
-                  <VBox prefHeight="550.0" prefWidth="300.0" />
+                  <VBox fx:id="messages" prefHeight="550.0" prefWidth="300.0" />
                </content></ScrollPane>
          </children>
       </VBox>
